Fix overflow issue and remove image placeholder

--- a/styles/message_board.css
+++ b/styles/message_board.css
@@ -129,7 +129,7 @@ body {
     display: -webkit-box;
     -webkit-line-clamp: 9;
     -webkit-box-orient: vertical;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .card > h2 {
@@ -137,7 +137,7 @@ body {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    overflow: hidden;
+    /* overflow: hidden; */
     
 }
 
